--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"vite": "^7.1.7"
 	},
 	"dependencies": {
-		"@davidnet/svelte-ui": "^1.13.6"
+		"@davidnet/svelte-ui": "^1.13.6",
+		"marked": "^16.4.1"
 	}
 }
