--- a/.github/workflows/NotifyPolicyChange.yaml
+++ b/.github/workflows/NotifyPolicyChange.yaml
@@ -18,14 +18,21 @@ jobs:
       - name: Compute hash of changed files
         id: hash
         run: |
-          FILES=$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }} | grep 'src/lib/legal/')
-          if [ -z "$FILES" ]; then
+          # Get all changed files from the latest commit
+          FILES=$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }})
+          # Filter only files inside src/lib/legal/
+          LEGAL_FILES=$(echo "$FILES" | grep 'src/lib/legal/' || true)
+
+          # If no legal files changed, stop here
+          if [ -z "$LEGAL_FILES" ]; then
             echo "No legal files changed."
             echo "hash=none" >> $GITHUB_OUTPUT
             exit 0
           fi
-          HASH=$(cat $FILES | sha256sum | awk '{print $1}')
-          echo "Changed files: $FILES"
+
+          # Compute combined SHA256 hash of changed legal files
+          HASH=$(cat $LEGAL_FILES | sha256sum | awk '{print $1}')
+          echo "Changed files: $LEGAL_FILES"
           echo "hash=$HASH" >> $GITHUB_OUTPUT
 
       - name: Send webhook to backend
