--- a/.github/workflows/NotifyPolicyChange.yaml
+++ b/.github/workflows/NotifyPolicyChange.yaml
@@ -16,9 +16,8 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Send webhook to backend
-        if: steps.hash.outputs.hash != 'none'
         run: |
           curl -X POST https://auth.davidnet.net/internal/policy_change \
           -H "Content-Type: application/json" \
           -H "X-Webhook-Token: ${{ github.sha }}" \
-          -d "{\"files\": \"${{ steps.hash.outputs.hash }}\", \"commit\": \"${{ github.sha }}\"}"
+          -d "{\"commit\": \"${{ github.sha }}\"}"
