--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	},
 	"dependencies": {
 		"@davidnet/svelte-ui": "^1.13.6",
-		"marked": "^16.4.1"
+		"marked": "^16.4.1",
+		"sitemap": "^9.0.0"
 	}
 }
