--- a/.github/workflows/NotifyPolicyChange.yaml
+++ b/.github/workflows/NotifyPolicyChange.yaml
@@ -18,6 +18,5 @@ jobs:
       - name: Send webhook to backend
         run: |
           curl -X POST https://auth.davidnet.net/internal/policy_change \
-          -H "Content-Type: application/json" \
-          -H "X-Webhook-Token: ${{ secrets.INTERNAL_TOKEN }}" \
-          -d "{\"commit\": \"${{ github.sha }}\"}"
+              -H "Content-Type: application/json" \
+              -d "{\"token\": \"${{ secrets.INTERNAL_TOKEN }}\", \"commit\": \"${{ github.sha }}\"}"
